--- a/src/translations/locale.ja.json
+++ b/src/translations/locale.ja.json
@@ -1,6 +1,18 @@
 {
   "locale": "ja",
   "translations": {
-    "vibesTrackerTitle": " バイブス トラッカー "
+    "vibesTrackerTitle": " バイブス トラッカー ",
+    "login_loginWithSpotify": "Spotifyでログイン",
+    "settings_logout": "ログアウト",
+    "settings_deleteExtendedHistory": "extended historyを削除",
+    "settings_clearIgnoredTracks": "無視されたトラックをクリア",
+    "nav_simpleTop": "シンプルぶんせき",
+    "nav_extendedTop": "ショウサイぶんせき",
+    "selector_artists": "アーティスト",
+    "selector_tracks": "トラック",
+    "selector_albums": "アルバム",
+    "selector_shortTerm": "4週間",
+    "selector_mediumTerm": "6ヶ月",
+    "selector_longTerm": "12ヶ月"
   }
 }
