--- a/public/translations/locale.uk.json
+++ b/public/translations/locale.uk.json
@@ -1,8 +1,9 @@
 {
   "locale": "uk",
   "translations": {
-    "vibesTrackerTitle": " вібєс трекєр ",
+    "vibesTrackerTitle": "vibes tracker",
     "login_loginWithSpotify": "увійти через spotify",
+    "login_authorizing-loading": "проводимо авторизацію...",
     "settings_title-general": "загальні налаштування",
     "settings_title-language": "мовні налаштування",
     "settings_logout": "вийти",
