--- a/public/translations/locale.uk.json
+++ b/public/translations/locale.uk.json
@@ -2,20 +2,28 @@
   "locale": "uk",
   "translations": {
     "vibesTrackerTitle": "vibes tracker",
+
     "login_loginWithSpotify": "увійти через spotify",
     "login_authorizing-loading": "проводимо авторизацію...",
+
     "settings_title-general": "загальні налаштування",
     "settings_title-language": "мовні налаштування",
     "settings_logout": "вийти",
     "settings_deleteExtendedHistory": "видалити розширену історію",
     "settings_clearIgnoredTracks": "очистити проігноровані треки",
+
     "nav_simpleTop": "простий топ",
     "nav_extendedTop": "розширений топ",
+
     "selector_artists": "виконавці",
     "selector_tracks": "треки",
     "selector_albums": "альбоми",
     "selector_shortTerm": "4 тижні",
     "selector_mediumTerm": "6 місяців",
-    "selector_longTerm": "12 місяців"
+    "selector_longTerm": "12 місяців",
+
+    "alert_sessionExpired-title": "Сесія закінчилася",
+    "alert_sessionExpired-message": "Токен сесії закінчився, ви будете перенаправлені на сторінку логіну.",
+    "alert_sessionExpired-buttonMessage": "Ок"
   }
 }
