--- a/public/translations/locale.ja.json
+++ b/public/translations/locale.ja.json
@@ -24,6 +24,10 @@
 
     "alert_sessionExpired-title": "セッションの期限切れ",
     "alert_sessionExpired-message": "セッショントークンの期限が切れました。ログインページにリダイレクトされます。",
-    "alert_sessionExpired-buttonMessage": "OK"
+    "alert_sessionExpired-buttonMessage": "OK",
+
+    "alert_emptyExtendedHistory-title": "Empty extended history",
+    "alert_emptyExtendedHistory-message": "The extended history file you provided had no valid recordsto upload. Make sure you upload the correct file.",
+    "alert_emptyExtendedHistory-buttonMessage": "OK"
   }
 }
