--- a/public/translations/source.json
+++ b/public/translations/source.json
@@ -28,6 +28,8 @@
 
     "alert_emptyExtendedHistory-title": "Empty extended history",
     "alert_emptyExtendedHistory-message": "The extended history file you provided had no valid records to upload. Make sure you upload the correct file.",
-    "alert_emptyExtendedHistory-buttonMessage": "OK"
+    "alert_emptyExtendedHistory-buttonMessage": "OK",
+
+    "DISMISS_ALL": "dismiss all"
   }
 }
