--- a/public/translations/source.json
+++ b/public/translations/source.json
@@ -39,6 +39,8 @@
     "@@alert_emptyExtendedHistory-message": "The extended history file you provided had no valid records to upload. Make sure you upload the correct file.",
     "@@alert_emptyExtendedHistory-buttonMessage": "OK",
 
+    "@@card-track__times-played-toolip": "Number indicates times played a track through selected period",
+
     "DISMISS_ALL": "dismiss all"
   }
 }
